# font-audit-crawler

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml  release_quality_audit.md  security_best_practices_report.md
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  index.md  reports.md  rules-engine.md  security.md  testing.md
examples/: config.basic.yaml  config.strict.yaml  rules.overrides.yaml
scripts/: demo-audit.sh  generate_fixture_report.py
src/font_audit_crawler/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging.py  scanner.py
src/font_audit_crawler/audit/: locale_review.py  rules_engine.py  vendor_detection.py
src/font_audit_crawler/browser/: page_loader.py  session.py
src/font_audit_crawler/crawl/: crawler.py  http_fetch.py  normalization.py  sitemap.py  url_filters.py
src/font_audit_crawler/extract/: text_nodes.py
src/font_audit_crawler/models/: config_models.py  crawl.py  findings.py  reports.py  rules.py  runtime.py
src/font_audit_crawler/reporting/: html_report.py  json_report.py  markdown_report.py
src/font_audit_crawler/reporting/templates/: report.html.j2
src/font_audit_crawler/rules/: approved_fonts.yaml  fallback_blacklist.yaml  locale_fallbacks.yaml  mappings.yaml  vendor_exceptions.yaml
src/font_audit_crawler/utils/: fonts.py  paths.py  strings.py
tests/: conftest.py
tests/e2e/: test_cli_scan.py
tests/fixtures/sites/approved-only/: index.html
tests/fixtures/sites/bad-fallback/: index.html
tests/fixtures/sites/bad-local-font-face/: index.html
tests/fixtures/sites/full-site/: approved.html  bad-local-font-face.html  index.html  inline-style.html  locale-review.html  non-approved-legacy.html  sitemap.xml  suspicious-fallback.html  vendor-widget.html
tests/fixtures/sites/inline-style-issue/: index.html
tests/fixtures/sites/locale-fallback-review/: index.html
tests/fixtures/sites/non-approved-legacy-font/: index.html
tests/fixtures/sites/overlay-cookie-banner/: index.html
tests/fixtures/sites/simple-approved/: index.html
tests/fixtures/sites/suspicious-fallback-stack/: index.html
tests/fixtures/sites/vendor-widget-exception/: index.html
tests/integration/: test_fixture_sites.py
tests/unit/: test_cli.py  test_config_loading.py  test_font_normalization.py  test_html_report.py  test_http_fetch.py  test_paths.py  test_rules_engine.py
